syntax = "proto3";

package accounts;

message User {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
}

service Accounts {
  rpc CreateUser(CreateUserRequest) returns (User) {}
}